@@ -895,7 +895,7 @@ sub _handle_keywords {
     my $new;
     foreach (@{ mk_aref($param->{new_keyword}) }) {
         next unless $_;
-        my $kw = Bric::Biz::Keyword->lookup({ name => $_ });
+        my $kw = Bric::Biz::Keyword->lookup({ name => $_, active => 1 });
         if ($kw) {
             chk_authz($kw, READ);
         } else {
